--- a/index.html
+++ b/index.html
@@ -72,5 +72,140 @@
         </div>
       </div>
     </section>
+
+    <!-- Creation section -->
+    <section id="creations">
+      <!-- Creations container -->
+      <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
+        <!-- Creations header -->
+        <div class="flex justify-center mb-20 md:justify-between">
+          <h2 class="text-4xl text-center uppercase md:text-left md:text-5xl">Our Creations</h2>
+
+          <button class="hidden btn md:block">See All</button>
+        </div>
+
+        <!-- Items container -->
+        <div class="item-container">
+          <!-- Item 1-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-deep-earth.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-deep-earth.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              Deep Earth
+            </h5>
+          </div>
+
+          <!-- Item 2-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-night-arcade.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-night-arcade.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              Night Arcade
+            </h5>
+          </div>
+
+          <!-- Item 3-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-soccer-team.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-soccer-team.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              Soccer Team VR
+            </h5>
+          </div>
+
+          <!-- Item 4-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-grid.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-grid.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              The Grid
+            </h5>
+          </div>
+        </div>
+
+        <!-- Items container 2 -->
+        <div class="item-container mt-10">
+          <!-- Item 1-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-from-above.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-from-above.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              From Up Above VR
+            </h5>
+          </div>
+
+          <!-- Item 2-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-pocket-borealis.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-pocket-borealis.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              Pocket Borealis
+            </h5>
+          </div>
+
+          <!-- Item 3-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-curiosity.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-curiosity.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              The Curiosity
+            </h5>
+          </div>
+
+          <!-- Item 4-->
+          <div class="group item">
+            <!-- Desktop image-->
+            <img src="images/desktop/image-fisheye.jpg" alt="" class="hidden w-full duration-200 md:block group-hover:scale-110">
+            <!-- Mobile image -->
+            <img src="images/desktop/image-fisheye.jpg" alt="" class="w-full md:hidden">
+            <!-- Item gradient -->
+            <div class="item-gradient"></div>
+            <!-- Item text -->
+            <h5>
+              Make It Fisheye
+            </h5>
+          </div>
+        </div>
+        <!-- Bottom button container -->
+        <div class="flex justify-center mt-10 md:hidden">
+          <button class="btn w-full md:hidden">See All</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
